--- a/wercker.yml
+++ b/wercker.yml
@@ -1,5 +1,31 @@
+dev:
+    box: maven:latest
+    steps:
+      - xenoterracide/maven:
+          goals: test
+      - script:
+          code: cp $WERCKER_SOURCE_DIR/target/crypto-gateway-gdax.jar /app.jar
+      - internal/docker-push:
+          cmd: "java -Djava.security.egd=file:/dev/./urandom -jar /app.jar"
+          ports: "8080"
+          tag: ${WERCKER_GIT_COMMIT}
+          username: _json_key
+          password: $GCP_KEY_JSON
+          repository: $GCR_TAG
+          registry: $GCR_HOST/v2
+
 build:
     box: maven:latest
     steps:
-        - xenoterracide/maven:
-            goals: test
+      - xenoterracide/maven:
+          goals: test
+      - script:
+          code: cp $WERCKER_SOURCE_DIR/target/crypto-gateway-gdax.jar /app.jar
+      - internal/docker-push:
+          cmd: "java -Djava.security.egd=file:/dev/./urandom -jar /app.jar"
+          ports: "8080"
+          tag: ${WERCKER_GIT_COMMIT}
+          username: _json_key
+          password: $GCP_KEY_JSON
+          repository: $GCR_TAG
+          registry: $GCR_HOST/v2
