--- a/wercker.yml
+++ b/wercker.yml
@@ -2,7 +2,7 @@ dev:
     box: maven:latest
     steps:
       - xenoterracide/maven:
-          goals: test
+          goals: package
       - script:
           code: cp $WERCKER_SOURCE_DIR/target/crypto-gateway-gdax.jar /app.jar
       - internal/docker-push:
@@ -18,7 +18,7 @@ build:
     box: maven:latest
     steps:
       - xenoterracide/maven:
-          goals: test
+          goals: package
       - script:
           code: cp $WERCKER_SOURCE_DIR/target/crypto-gateway-gdax.jar /app.jar
       - internal/docker-push:
