--- a/wercker.yml
+++ b/wercker.yml
@@ -1,5 +1,5 @@
+box: maven:latest
 dev:
-    box: maven:latest
     steps:
       - xenoterracide/maven:
           goals: package
@@ -15,7 +15,6 @@ dev:
           registry: $GCR_HOST/v2
 
 build:
-    box: maven:latest
     steps:
       - xenoterracide/maven:
           goals: package
@@ -29,3 +28,19 @@ build:
           password: $GCP_KEY_JSON
           repository: $GCR_TAG
           registry: $GCR_HOST/v2
+
+deploy:
+    upgrade:
+      - bash-template
+      - script:
+          code: ls -la $WERCKER_SOURCE_DIR/kubernetes
+      - script:
+          code: cat $WERCKER_SOURCE_DIR/kubernetes/kubernetes_deployment.yml
+      - riceo/kubectl:
+          name: deploy to kubernetes
+          server: $KUBERNETES_MASTER
+          gcloud-key-json: $GCP_KEY_JSON
+          gke-cluster-name: $GKE_CLUSTER_NAME
+          gke-cluster-zone: $GKE_CLUSTER_ZONE
+          gke-cluster-project: $GKE_CLUSTER_PROJECT
+          command: apply -f $WERCKER_OUTPUT_DIR/kubernetes/
