--- a/wercker.yml
+++ b/wercker.yml
@@ -33,6 +33,11 @@ deploy:
     steps:
       - bash-template
       - script:
+          name: Prepare Kubernetes files
+          code: |
+            mkdir $WERCKER_OUTPUT_DIR/kubernetes
+            mv kubernetes_*.yml $WERCKER_OUTPUT_DIR/kubernetes
+      - script:
           code: ls -la $WERCKER_SOURCE_DIR/kubernetes
       - script:
           code: cat $WERCKER_SOURCE_DIR/kubernetes/kubernetes_deployment.yml
