--- a/wercker.yml
+++ b/wercker.yml
@@ -15,7 +15,7 @@ build:
         registry: $GCR_HOST/v2
 
 deploy:
-  box: ubuntu:latest
+  box: python:2.7
   steps:
     - bash-template
     - script:
